force-app/main/default/objects/Apex_Error_Message__c/Apex_Error_Message__c.object-meta.xml
<CustomObject>
    <label>Apex Error Message</label>
    <nameField>
        <label>Apex Error Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Error Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>