force-app/main/default/objects/Apex_Error_Message__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apex Error Messages</relationshipLabel>
    <relationshipName>Apex_Error_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>