force-app/main/default/objects/Apex_Error_Message__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>