force-app/main/default/objects/Apex_Error_Message__c/fields/Callout_Body__c.field-meta.xml
<CustomField>
    <fullName>Callout_Body__c</fullName>
    <label>Callout Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>