force-app/main/default/objects/Apex_Error_Message__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>