force-app/main/default/objects/Apex_Error_Message__c/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <label>RecordName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>